fixed search width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,7 @@ div .react-mapbox-ac-input-dark:focus {
 div [class$="--SearchBox"] {
   box-shadow: none !important;
   border: solid 1px gray;
+  max-width: 90%;
 }
 
 .mapboxgl-popup-tip {
